--- a/app/src/main/res/layout/item_public.xml
+++ b/app/src/main/res/layout/item_public.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/rl_article"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/bg_press"
@@ -10,50 +9,43 @@
     android:padding="16dp">
 
     <RelativeLayout
-        android:id="@+id/rl_top"
+        android:id="@+id/topLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical">
-
-        <LinearLayout
-            android:id="@+id/ll_new"
-            android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            android:layout_alignTop="@+id/tv_author"
-            android:layout_alignBottom="@+id/tv_author"
-            android:layout_centerVertical="true"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:id="@+id/tv_new"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="5dp"
-                android:text="新"
-                android:textColor="@color/text_main"
-                android:textSize="@dimen/text_notes" />
-
-        </LinearLayout>
+        android:gravity="center_vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tv_author"
+            android:id="@+id/newTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/ll_new"
+            android:layout_marginEnd="5dp"
+            android:text="新"
+            android:textColor="@color/text_main"
+            android:textSize="@dimen/text_notes"
+            tools:ignore="HardcodedText" />
+
+        <TextView
+            android:id="@+id/authorTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/newTv"
             android:textColor="@color/selector_text_color_article_author"
             android:textSize="@dimen/text_notes"
             tools:text="林帅并不帅" />
 
         <TextView
-            android:id="@+id/tv_tag"
+            android:id="@+id/tagTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/tv_author"
-            android:layout_alignBottom="@+id/tv_author"
+            android:layout_alignTop="@id/authorTv"
+            android:layout_alignBottom="@id/authorTv"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/tv_author"
+            android:layout_marginStart="5dp"
+            android:layout_toEndOf="@id/authorTv"
             android:background="@drawable/selector_article_tag_bg"
             android:gravity="center"
             android:paddingLeft="3dp"
@@ -63,12 +55,12 @@
             tools:text="项目" />
 
         <TextView
-            android:id="@+id/tv_time"
+            android:id="@+id/timeTv"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_alignTop="@+id/tv_author"
-            android:layout_alignBottom="@+id/tv_author"
-            android:layout_alignParentRight="true"
+            android:layout_alignTop="@id/authorTv"
+            android:layout_alignBottom="@id/authorTv"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:textColor="@color/text_third"
             android:textSize="@dimen/text_notes"
@@ -76,106 +68,85 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/ll_middle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rl_top"
+    <com.joooonho.SelectableRoundedImageView
+        android:id="@+id/image"
+        android:layout_width="120dp"
+        android:layout_height="80dp"
         android:layout_marginTop="10dp"
-        android:orientation="horizontal">
+        android:scaleType="fitXY"
+        android:visibility="gone"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topLayout"
+        app:sriv_left_bottom_corner_radius="3dp"
+        app:sriv_left_top_corner_radius="3dp"
+        app:sriv_right_bottom_corner_radius="3dp"
+        app:sriv_right_top_corner_radius="3dp"
+        tools:src="@drawable/common_load_error"
+        tools:visibility="visible" />
 
-        <com.joooonho.SelectableRoundedImageView
-            android:id="@+id/iv_img"
-            android:layout_width="120dp"
-            android:layout_height="80dp"
-            android:layout_marginEnd="10dp"
-            android:scaleType="fitXY"
-            android:visibility="gone"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:sriv_left_bottom_corner_radius="3dp"
-            app:sriv_left_top_corner_radius="3dp"
-            app:sriv_right_bottom_corner_radius="3dp"
-            app:sriv_right_top_corner_radius="3dp"
-            tools:src="@drawable/ic_load_error"
-            tools:visibility="visible" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+    <TextView
+        android:id="@+id/titleTv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:ellipsize="end"
+        android:includeFontPadding="false"
+        android:lineSpacingExtra="0dp"
+        android:maxLines="3"
+        android:singleLine="false"
+        android:textColor="@color/text_surface"
+        android:textSize="@dimen/text_content"
+        app:layout_constraintLeft_toRightOf="@id/image"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@id/image"
+        tools:singleLine="true"
+        tools:text="公众号文章列表强势上线公众号文章列表强势公众号文章列表强势上线公众号文章列表强势" />
 
-            <TextView
-                android:id="@+id/tv_title"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:includeFontPadding="false"
-                android:lineSpacingExtra="0dp"
-                android:maxLines="3"
-                android:singleLine="false"
-                android:textColor="@color/text_surface"
-                android:textSize="@dimen/text_content"
-                tools:singleLine="true"
-                tools:text="公众号文章列表强势上线公众号文章列表强势公众号文章列表强势上线公众号文章列表强势" />
+    <TextView
+        android:id="@+id/descTv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:ellipsize="end"
+        android:includeFontPadding="true"
+        android:lineSpacingExtra="0dp"
+        android:maxLines="3"
+        android:textColor="@color/text_second"
+        android:textSize="@dimen/text_auxiliary"
+        android:visibility="gone"
+        app:layout_constraintLeft_toRightOf="@id/image"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleTv"
+        tools:text="公众号文章列表强势上线"
+        tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/tv_desc"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="5dp"
-                android:layout_weight="1"
-                android:ellipsize="end"
-                android:includeFontPadding="true"
-                android:lineSpacingExtra="0dp"
-                android:maxLines="3"
-                android:textColor="@color/text_second"
-                android:textSize="@dimen/text_auxiliary"
-                android:visibility="gone"
-                tools:text="公众号文章列表强势上线"
-                tools:visibility="visible" />
 
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_top"
+    <TextView
+        android:id="@+id/topTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_middle"
-        android:layout_centerVertical="true"
         android:layout_marginTop="10dp"
-        android:gravity="center_vertical">
+        android:text="置顶"
+        android:textColor="@color/text_accent"
+        android:textSize="@dimen/text_notes"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/image"
+        tools:ignore="HardcodedText" />
 
-        <TextView
-            android:id="@+id/tv_top"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:text="置顶"
-            android:textColor="@color/text_accent"
-            android:textSize="@dimen/text_notes" />
 
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/ll_chapter"
+    <TextView
+        android:id="@+id/chapterNameTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/ll_middle"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/ll_top"
-        android:orientation="horizontal">
+        android:textColor="@color/selector_text_color_article_chapter"
+        android:textSize="@dimen/text_notes"
+        app:layout_constraintLeft_toRightOf="@id/topTv"
+        app:layout_constraintTop_toBottomOf="@id/image"
+        tools:text="动画效果·Lottie" />
 
-        <TextView
-            android:id="@+id/tv_chapter_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/selector_text_color_article_chapter"
-            android:textSize="@dimen/text_notes"
-            tools:text="动画效果·Lottie" />
 
-    </LinearLayout>
-
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
