--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,93 +3,109 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/ivIconTop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:src="@mipmap/ic_launcher"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="30dp"/>
+        tools:ignore="ContentDescription" />
+
     <TextView
         android:id="@+id/tvDesc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/ivIconTop"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="10dp"
         android:text="欢迎使用"
         android:textColor="#333333"
-        android:layout_marginTop="10dp"
-        />
-     <TextView
-         android:id="@+id/tvGoRegister"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="去注册"
-         android:textColor="#1296db"
-         app:layout_constraintTop_toBottomOf="@+id/tv_desc"
-         app:layout_constraintLeft_toLeftOf="parent"
-         app:layout_constraintRight_toRightOf="parent"
-         android:layout_marginTop="@dimen/dp_10"/>
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:orientation="vertical"
-          app:layout_constraintTop_toBottomOf="@+id/tvGoRegister"
-          app:layout_constraintLeft_toLeftOf="parent"
-          app:layout_constraintRight_toRightOf="parent"
-          android:layout_marginTop="20dp"
-          android:layout_marginLeft="16dp"
-          android:layout_marginRight="16dp">
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="48dp"
-           android:orientation="horizontal">
-       <ImageView
-           android:layout_width="30dp"
-           android:layout_height="30dp"
-           android:src="@drawable/icon_user"
-           android:layout_gravity="center"/>
-       <EditText
-           android:id="@+id/etUserName"
-           android:layout_width="0dp"
-           android:layout_height="match_parent"
-           android:layout_weight="1"
-           android:layout_marginLeft="8dp"
-           android:textColor="@color/color_333333"
-           android:textSize="16dp"/>
-       </LinearLayout>
-          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="48dp"
-              android:orientation="horizontal">
-              <ImageView
-                  android:layout_width="30dp"
-                  android:layout_height="30dp"
-                  android:src="@drawable/icon_password"
-                  android:layout_gravity="center"/>
-              <EditText
-                  android:id="@+id/etPassword"
-                  android:layout_width="0dp"
-                  android:layout_height="match_parent"
-                  android:layout_weight="1"
-                  android:layout_marginLeft="8dp"
-                  android:textColor="@color/color_333333"
-                  android:textSize="16dp"/>
-          </LinearLayout>
-          <TextView
-              android:id="@+id/tvLoginSubmit"
-              android:layout_width="match_parent"
-              android:layout_height="48dp"
-              android:background="@drawable/bg_shape_1296db"
-              android:layout_marginTop="20dp"
-              android:textSize="18dp"
-              android:textColor="@color/color_ffffff"
-              android:text="登录"
-              android:gravity="center"/>
-      </LinearLayout>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivIconTop"
+        tools:ignore="HardcodedText" />
+
+    <TextView
+        android:id="@+id/tvGoRegister"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/dp_10"
+        android:text="去注册"
+        android:textColor="#1296db"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvDesc"
+        tools:ignore="HardcodedText" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginRight="16dp"
+        android:orientation="vertical"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvGoRegister">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_user_press"
+                tools:ignore="ContentDescription" />
+
+            <EditText
+                android:id="@+id/etUserName"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:textColor="#333333"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_password"
+                tools:ignore="ContentDescription" />
+
+            <EditText
+                android:id="@+id/etPassword"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:textColor="#333333"
+                android:textSize="16sp" />
+        </LinearLayout>
+
+        <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
+            android:id="@+id/tvLoginSubmit"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="20dp"
+            android:gravity="center"
+            android:text="登录"
+            android:textColor="#ffffff"
+            android:textSize="18sp"
+            app:qmui_backgroundColor="#1296db"
+            app:qmui_radius="6dp"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
