精简颜色配置

--- a/app/src/main/res/layout/item_public.xml
+++ b/app/src/main/res/layout/item_public.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
         android:text="新"
-        android:textColor="@color/text_main"
+        android:textColor="@color/blue1"
         android:textSize="@dimen/text_notes"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="0dp"
         android:layout_centerVertical="true"
-        android:textColor="@color/text_third"
+        android:textColor="@color/smallContent"
         android:textSize="@dimen/text_notes"
         app:layout_constraintBaseline_toBaselineOf="@id/tvNew"
         app:layout_constraintRight_toRightOf="parent"
@@ -102,7 +102,7 @@
         android:lineSpacingExtra="0dp"
         android:maxLines="3"
         android:singleLine="false"
-        android:textColor="@color/text_surface"
+        android:textColor="@color/title"
         android:textSize="@dimen/text_content"
         app:layout_constraintLeft_toRightOf="@id/image"
         app:layout_constraintRight_toRightOf="parent"
@@ -121,7 +121,7 @@
         android:includeFontPadding="true"
         android:lineSpacingExtra="0dp"
         android:maxLines="3"
-        android:textColor="@color/text_second"
+        android:textColor="@color/content"
         android:textSize="@dimen/text_auxiliary"
         android:visibility="gone"
         app:layout_constraintLeft_toRightOf="@id/image"
@@ -146,7 +146,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="置顶"
-        android:textColor="@color/text_accent"
+        android:textColor="@color/orange"
         android:textSize="@dimen/text_notes"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/barrier"
