--- a/app/src/main/res/color/selector_text_color_article_author.xml
+++ b/app/src/main/res/color/selector_text_color_article_author.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/text_second" android:state_pressed="true" />
-    <item android:color="@color/text_second" />
+    <item android:color="@color/content" android:state_pressed="true" />
+    <item android:color="@color/content" />
 </selector>
