--- a/app/src/main/res/color/selector_text_color_article_tag.xml
+++ b/app/src/main/res/color/selector_text_color_article_tag.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:color="@color/text_main_alpha" android:state_pressed="true" />
-    <item android:color="@color/text_main" />
+    <item android:color="@color/blue2" android:state_pressed="true" />
+    <item android:color="@color/blue1" />
 </selector>
