登录逻辑处理

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:src="@mipmap/ic_launcher"
+        android:src="@mipmap/ic_login_top"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -57,10 +57,11 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/ivIconUser"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_user_press"
+                android:src="@drawable/selector_user_bg"
                 tools:ignore="ContentDescription" />
 
             <EditText
@@ -79,10 +80,11 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/ivIconPassword"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_password"
+                android:src="@drawable/selector_password_bg"
                 tools:ignore="ContentDescription" />
 
             <EditText
