--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
         android:textColor="#333333"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ivIconTop"
+        app:layout_constraintTop_toBottomOf="@id/ivIconTop"
         tools:ignore="HardcodedText" />
 
     <TextView
@@ -37,7 +37,7 @@
         android:textColor="#1296db"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvDesc"
+        app:layout_constraintTop_toBottomOf="@id/tvDesc"
         tools:ignore="HardcodedText" />
 
     <LinearLayout
@@ -49,7 +49,7 @@
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvGoRegister">
+        app:layout_constraintTop_toBottomOf="@id/tvGoRegister">
 
         <LinearLayout
             android:layout_width="match_parent"
