--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -38,9 +38,11 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDesc"
-        tools:ignore="HardcodedText" />
+        tools:ignore="HardcodedText"
+        android:padding="8dp"/>
 
     <LinearLayout
+        android:id="@+id/llLoginLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
@@ -71,10 +73,13 @@
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 android:textColor="#333333"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:hint="请输入用户名"
+                android:textColorHint="#999999"/>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/llPassword"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:orientation="horizontal">
@@ -94,11 +99,39 @@
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
                 android:textColor="#333333"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                android:hint="请输入密码"
+                android:textColorHint="#999999"/>
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/llConfirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:orientation="horizontal"
+            android:visibility="gone">
 
+            <ImageView
+                android:id="@+id/ivIconConfirmPassword"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center"
+                android:src="@drawable/selector_password_bg"
+                tools:ignore="ContentDescription" />
+
+            <EditText
+                android:id="@+id/etConfirmPassword"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
+                android:textColor="#333333"
+                android:textSize="16sp"
+                android:hint="请输入密码"
+                android:textColorHint="#999999"/>
+
+        </LinearLayout>
         <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
-            android:id="@+id/tvLoginSubmit"
+            android:id="@+id/tvSubmit"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginTop="20dp"
