升级第三方库的版本，删掉废弃的库（临时修改

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.flyco.tablayout.CommonTabLayout
+    <com.liuhc.library.view.ExtTabLayout
         android:id="@+id/bottomNavBar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
